--- a/sass/layouts/_about-statistic-section.scss
+++ b/sass/layouts/_about-statistic-section.scss
@@ -1,9 +1,10 @@
 .about__statistic-block{
-    margin-left: 650px;
-    margin-bottom: 80px;
+    @include desktop{
+        margin-left: 650px;
+        margin-bottom: 80px;
+    }
 }
 .statistic__image{
     border-radius: 24px;
-    width: 1280px;
-    height: 564px;
+    margin: 0 auto;
 }
