--- a/sass/layouts/_about-history-section.scss
+++ b/sass/layouts/_about-history-section.scss
@@ -3,18 +3,36 @@ text-align: start;
 }
 .about__history__block-container{
     display: flex;
+    flex-direction: column;    
     gap: 20px;
+    margin-bottom: 32px;
+    @include desktop{
+        flex-direction: row;
+    }
 }
 .about__history-block{
     border-radius: 24px;
-    padding: 24px;
-    width: 413px;
+    padding: 16px;
+    width: 100%;
     background-color: var(--white);
-    margin-bottom: 40px;
+    // margin-bottom: 24px;
+    @include tablet{
+        // width: 200px;
+    }
+    @include desktop{
+        width: 413px; 
+        padding: 24px;
+        margin-bottom: 40px;
+    }
 }
 .about__history-subtitle{
     display: flex;
     justify-content: flex-start;
+    // font-size: 16px;
     font-weight: 700;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
+    @include desktop{
+        font-weight: 700;
+        margin-bottom: 24px;
+    }
 }
