--- a/sass/layouts/_about-description-section.scss
+++ b/sass/layouts/_about-description-section.scss
@@ -1,5 +1,9 @@
 .about__description__container-all{
     display: flex;
+    flex-direction: column;
+    @include desktop{
+       flex-direction: row;
+    }
 }
 .about__description__container-big{
     display: flex;
@@ -10,19 +14,38 @@
 }
 .about__description-container{
     display: flex;
+    flex-direction: column;
     // flex-wrap: wrap;
-    gap: 20px;
+    gap: 16px;
     margin-top: 24px;
     // width: 630px;
+    @include tablet{
+        flex-direction: row;
+        gap: 20px;
+    }
+    @include desktop{
+        gap: 20px;
+        flex-direction: row;
+    }
 }
 .about__description-block{
     border-radius: 24px;
-    padding: 24px;
+    padding: 16px;
     // width: 257px;
-    width: 305px;
+    width: 100%;
     // height: 217px;
     margin-bottom: 20px;  
+    @include desktop{
+        width: 305px;
+        padding: 24px;
+    }
     // background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+}
+.about__description__text-container{
+    width: 100%;
+    @include desktop{
+        width: 628px;
+    }
 }
 .block__orange{
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
@@ -40,30 +63,58 @@
     flex-direction: column;
     justify-content: space-between;
     border-radius: 24px;
-    padding: 24px;
+    padding: 16px;
     // width: 582px;
-    width: 630px;
-    height: 265px;
+    width: 100%;
+    // height: 265px;
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
     margin-right: 21px;
+    @include desktop{
+        width: 630px;
+        padding: 24px;
+    }
 }
 .about__description-text{
-    margin-bottom: 48px;;
+    margin-bottom: 48px;
+   
 }
 .arrow__orange{
     width: 40px;
     height: 40px;
+    margin-bottom: 32px;
     fill: var(--orange-dark);
-    margin-left: 217px;
+    margin-left: 267px;
+    @include tablet{
+        margin-left: 217px;
+    }
+    @include desktop{
+       margin-bottom: 0;
+       margin-left: 217px;
+    }
 }
 .arrow__white{
     width: 40px;
     height: 40px;
-    margin-left: 542px;
+    margin-left: 267px;
+    margin-bottom: 32px;
+    @include tablet{
+        margin-bottom: 85px;
+        margin-left: 572px;
+    }
+    @include desktop{
+        margin-left: 542px;
+        margin-bottom: 111px;
+    }
 }
 .image__description{
     border-radius: 24px;
-    width: 630px;
-    height: 550px;
-    margin-top: 24px;
+    // width: 630px;
+    // height: 550px;
+    margin-top: 16px;
+    @include tablet{
+        margin-top: 20px;
+    }
+    @include desktop{
+        margin-top: 24px;
+    }
 }
