--- a/css/main.css
+++ b/css/main.css
@@ -1738,22 +1738,38 @@ button:focus {
 .about__product-text {
   font-family: "Fixel Display", sans-serif;
   font-weight: 600;
-  font-size: 32px;
+  font-size: 20px;
   line-height: 140%;
   color: var(--white);
+}
+@media screen and (min-width: 1440px) {
+  .about__product-text {
+    font-size: 32px;
+  }
 }
 
 .about__product__block-first {
   display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 1440px) {
+  .about__product__block-first {
+    gap: 20px;
+    margin-bottom: 20px;
+  }
 }
 
 .about__product__block-second {
   display: flex;
-  gap: 20px;
-  margin-left: 433px;
-  margin-bottom: 40px;
+  gap: 16px;
+}
+@media screen and (min-width: 1440px) {
+  .about__product__block-second {
+    margin-left: 433px;
+    margin-bottom: 40px;
+    gap: 20px;
+  }
 }
 
 .about__product__block-third {
@@ -1763,9 +1779,22 @@ button:focus {
 .about__product-block {
   position: relative;
   border-radius: 24px;
-  padding: 24px;
-  width: 413px;
-  height: 320px;
+  padding: 16px;
+  width: 164px;
+  height: 190px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .about__product-block {
+    width: 314px;
+    height: 243px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__product-block {
+    padding: 24px;
+    width: 413px;
+    height: 320px;
+  }
 }
 
 .about__product__block-orange {
@@ -1786,26 +1815,45 @@ button:focus {
 
 .image__popcorn {
   position: absolute;
-  top: 70px;
-  left: 187px;
+  bottom: 0;
+  right: 0;
 }
-
 .image__snex {
   position: absolute;
-  top: 62px;
-  left: 149px;
+  bottom: 12px;
+  right: 15px;
+  transform: rotate(-10deg);
+}
+@media screen and (min-width: 1440px) {
+  .image__snex {
+    bottom: 20px;
+    right: 25px;
+  }
 }
 
 .image__corn {
   position: absolute;
-  top: 76px;
-  left: 146px;
+  bottom: 5px;
+  right: 13px;
+  transform: rotate(-5deg);
+}
+@media screen and (min-width: 1440px) {
+  .image__corn {
+    bottom: 20px;
+    right: 25px;
+  }
 }
 
 .image__twin {
   position: absolute;
-  top: 80px;
-  left: 179px;
+  bottom: 0;
+  right: 0;
+}
+@media screen and (min-width: 1440px) {
+  .image__twin {
+    top: 80px;
+    left: 179px;
+  }
 }
 
 .product__hero-title {
