--- a/sass/layouts/_about-product-section.scss
+++ b/sass/layouts/_about-product-section.scss
@@ -5,20 +5,31 @@
 .about__product-text{
     font-family: "Fixel Display", sans-serif;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 20px;
     line-height: 140%;
     color: var(--white);
+    @include desktop{
+        font-size: 32px;
+    }
 }
 .about__product__block-first{
     display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 16px;
+    margin-bottom: 16px;
+    @include desktop{
+        gap: 20px;
+        margin-bottom: 20px;
+    }
 }
 .about__product__block-second{
     display: flex;
-    gap: 20px;
-    margin-left: 433px;
-    margin-bottom: 40px;
+    gap: 16px;
+    @include desktop{
+        margin-left: 433px;
+        margin-bottom: 40px;
+        gap: 20px;
+
+    }
 }
 .about__product__block-third{
     margin-left: 433px;
@@ -26,9 +37,18 @@
 .about__product-block{
     position: relative;
     border-radius: 24px;
-    padding: 24px;
-    width: 413px;
-    height: 320px;
+    padding: 16px;
+    width: 164px;
+    height: 190px;
+    @include tablet{
+        width: 314px;
+        height: 243px;
+    }
+    @include desktop{
+        padding: 24px;
+        width: 413px;
+        height: 320px;
+    }
 }
 .about__product__block-orange{
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
@@ -44,21 +64,46 @@
 }
 .image__popcorn{
     position: absolute;
-    top: 70px;
-    left: 187px;
+    bottom: 0;
+    right: 0;
+    @include desktop{
+        // top: 70px;
+        // left: 187px;
+
+
+    }
 }
 .image__snex{
     position: absolute;
-    top:62px;
-    left: 149px;
+    bottom: 12px;
+    right: 15px;
+    transform: rotate(-10deg);
+    @include desktop{
+        // top:62px;
+        // left: 149px;
+        bottom: 20px;
+        right: 25px;
+
+    }
 }
 .image__corn{
     position: absolute;
-    top: 76px;
-    left: 146px;
+    bottom: 5px;
+    right: 13px;
+    transform: rotate(-5deg);
+    @include desktop{
+        bottom: 20px;
+        right: 25px;
+
+    }
 }
 .image__twin{
     position: absolute;
-    top: 80px;
-    left: 179px;
+    bottom: 0;
+    right: 0;
+    @include desktop{
+        top: 80px;
+        left: 179px;
+
+    }
 }
