--- a/css/main.css
+++ b/css/main.css
@@ -1429,7 +1429,7 @@ button:focus {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .about__production-image {
-    top: 150px;
+    top: 180px;
     left: 390px;
   }
 }
@@ -1732,7 +1732,12 @@ button:focus {
 
 .about__product-title {
   text-align: start;
-  margin-top: 24px;
+  margin-top: 20px;
+}
+@media screen and (min-width: 1440px) {
+  .about__product-title {
+    margin-top: 24px;
+  }
 }
 
 .about__product-text {
@@ -1763,6 +1768,7 @@ button:focus {
 .about__product__block-second {
   display: flex;
   gap: 16px;
+  margin-bottom: 24px;
 }
 @media screen and (min-width: 1440px) {
   .about__product__block-second {
@@ -1772,8 +1778,10 @@ button:focus {
   }
 }
 
-.about__product__block-third {
-  margin-left: 433px;
+@media screen and (min-width: 1440px) {
+  .about__product__block-third {
+    margin-left: 433px;
+  }
 }
 
 .about__product-block {
@@ -2240,22 +2248,38 @@ button:focus {
 
 .partner__title {
   font-weight: 700;
-  font-size: 72px;
+  font-size: 40px;
   text-align: start;
   margin-top: 56px;
   margin-bottom: 16px;
   border-bottom: 1px solid var(--black-hover);
 }
+@media screen and (min-width: 1440px) {
+  .partner__title {
+    font-size: 72px;
+  }
+}
 
 .partner__subtitle {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 17px;
   text-align: start;
+}
+@media screen and (min-width: 1440px) {
+  .partner__subtitle {
+    font-size: 20px;
+  }
 }
 
 .advantages__container {
   background-color: var(--white);
   border-radius: 24px;
+}
+
+.partner__block {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .advantage__item {
@@ -2265,32 +2289,50 @@ button:focus {
 
 .advantage__list {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   width: 100%;
-  padding: 40px 24px;
+  padding: 32px 32px 32px 16px;
   border-bottom: 1px solid var(--grey-more-light);
+}
+@media screen and (min-width: 1440px) {
+  .advantage__list {
+    padding: 40px 24px;
+  }
 }
 
 .advantage__number {
   display: flex;
-  width: 400px;
   font-family: "Fixel Display", sans-serif;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 140%;
   color: var(--black);
+}
+@media screen and (min-width: 1440px) {
+  .advantage__number {
+    font-size: 24px;
+    width: 400px;
+  }
 }
 
 .advantage__text {
   display: flex;
-  width: 400px;
+  width: 100%;
   font-family: "Tektur", sans-serif;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
   text-transform: uppercase;
   color: var(--black);
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 1440px) {
+  .advantage__text {
+    width: 400px;
+    font-size: 24px;
+    margin-bottom: 0;
+  }
 }
 
 .contacts__container {
