--- a/sass/layouts/_about-product-section.scss
+++ b/sass/layouts/_about-product-section.scss
@@ -1,6 +1,10 @@
 .about__product-title{
     text-align: start;
-    margin-top: 24px;
+    margin-top: 20px;
+    @include desktop{
+        margin-top: 24px;
+
+    }
 }
 .about__product-text{
     font-family: "Fixel Display", sans-serif;
@@ -24,6 +28,7 @@
 .about__product__block-second{
     display: flex;
     gap: 16px;
+    margin-bottom: 24px;
     @include desktop{
         margin-left: 433px;
         margin-bottom: 40px;
@@ -32,7 +37,10 @@
     }
 }
 .about__product__block-third{
-    margin-left: 433px;
+    @include desktop{
+        margin-left: 433px;
+
+    }
 }
 .about__product-block{
     position: relative;
