--- a/sass/layouts/_partners-hero-section.scss
+++ b/sass/layouts/_partners-hero-section.scss
@@ -3,21 +3,32 @@
 }
 .partner__title{
     font-weight: 700;
-    font-size: 72px;
+    font-size: 40px;
     text-align: start;
     margin-top: 56px;
     margin-bottom: 16px;
     border-bottom: 1px solid var(--black-hover);
+    @include desktop{
+        font-size: 72px;
+    }
 }
 .partner__subtitle{
     font-weight: 500;
-    font-size: 20px;
+    font-size: 17px;
     text-align: start;
+    @include desktop{
+        font-size: 20px;
+    }
 }
 .advantages__container{
     background-color: var(--white);
     // height: 794px;
     border-radius: 24px;
+}
+.partner__block{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 .advantage__item{
     display: flex;
@@ -26,30 +37,44 @@
 .advantage__list{
     display: flex;
     // align-items: baseline;
-    gap: 20px;
+    gap: 30px;
     width: 100%;
     // height: 66px;
-    padding: 40px 24px;
+    padding: 32px 32px 32px 16px;
     border-bottom: 1px solid var(--grey-more-light);
+    @include desktop{
+        padding: 40px 24px;
+    }
 }
 .advantage__number{
     display: flex;
-    width: 400px;
+    // width: 100%;
     font-family: 'Fixel Display', sans-serif;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 140%;
     color: var(--black);
+    @include desktop{
+        font-size: 24px;
+        width: 400px;
+    }
 }
 .advantage__text{
     display: flex;
-    width: 400px;
+    width: 100%;
     font-family: 'Tektur', sans-serif;
     font-weight: 500;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
     text-transform: uppercase;
     color: var(--black);
+    margin-bottom: 16px;
+    @include desktop{
+        width: 400px;
+        font-size: 24px;
+        margin-bottom: 0;
+
+    }
 }
 
