--- a/sass/layouts/_partners-hero-section.scss
+++ b/sass/layouts/_partners-hero-section.scss
@@ -8,6 +8,9 @@
     margin-top: 56px;
     margin-bottom: 16px;
     border-bottom: 1px solid var(--black-hover);
+    @include tablet{
+        font-size: 64px;
+    }
     @include desktop{
         font-size: 72px;
     }
@@ -29,6 +32,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    align-items: start;
+    @include desktop{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
 }
 .advantage__item{
     display: flex;
@@ -42,8 +52,10 @@
     // height: 66px;
     padding: 32px 32px 32px 16px;
     border-bottom: 1px solid var(--grey-more-light);
+    align-items: start;
     @include desktop{
         padding: 40px 24px;
+        align-items: center;
     }
 }
 .advantage__number{
@@ -70,11 +82,23 @@
     text-transform: uppercase;
     color: var(--black);
     margin-bottom: 16px;
+    @include tablet{
+        width: 300px;
+    }
     @include desktop{
         width: 400px;
         font-size: 24px;
         margin-bottom: 0;
 
+    }
+}
+.advantage__description{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    @include desktop{
+
+        width: 400px;
     }
 }
 
