--- a/sass/layouts/_product-section-partners.scss
+++ b/sass/layouts/_product-section-partners.scss
@@ -1,7 +1,10 @@
 .partner__container{
-    padding: 80px 0 0 0;
+    padding: 80px 8px 0 8px;
     border-radius: 24px;
     background: linear-gradient(153deg, #12a1de 0%, #c6ffd9 100%);
+    @include desktop{
+        padding: 80px 0 0 0;
+    }
 }
 .partners__title{
     color: var(--white);
@@ -25,10 +28,10 @@
     width: 100%;
     @include tablet{
        width: 243px;
-       margin: 0;
+       margin: 0 auto;
     }
     @include desktop{
         width: 243px;
-        margin: 0;
+        margin: 0 auto;
     }
 }
