--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ html, body {
   line-height: 140%;
   text-align: center;
   color: var(--black);
-  margin-bottom: 36px;
+  margin-bottom: 24px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .subtitle {
@@ -1887,39 +1887,31 @@ button:focus {
   position: relative;
   font-family: "Tektur", sans-serif;
   font-weight: 700;
-  font-size: 72px;
+  font-size: 40px;
   line-height: 120%;
   text-transform: uppercase;
   color: var(--white);
   text-align: center;
   margin-bottom: 16px;
 }
-
-.product__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 442px;
+@media screen and (min-width: 1440px) {
+  .product__hero-title {
+    font-size: 72px;
+    margin-bottom: 16px;
+  }
 }
 
 .product__hero-container {
   display: flex;
   flex-direction: column;
-  position: relative;
-  width: 1280px;
+  padding: 16px;
 }
 
 .product__hero-image {
-  position: absolute;
-  top: 200px;
-  left: 410px;
-  width: 413px;
-  height: 631px;
-  z-index: 1;
+  margin: 0 auto;
 }
 
 .product__row-container {
-  width: 1440px;
   margin: 0 auto;
 }
 
@@ -1928,14 +1920,19 @@ button:focus {
   display: flex;
   align-items: center;
   margin: 0;
-  font-size: 43px;
+  font-size: 32px;
+}
+@media screen and (min-width: 1440px) {
+  .product__row-title {
+    font-size: 43px;
+  }
 }
 
 .marquee__text {
   max-width: 100%;
   padding: 6px 0;
-  border-bottom: 2px solid black;
-  border-top: 2px solid black;
+  border-bottom: 2px solid var(--grey-light);
+  border-top: 2px solid var(--grey-light);
   overflow: hidden;
 }
 
@@ -1966,11 +1963,41 @@ button:focus {
   }
 }
 .product__subhero-container {
-  padding-top: 309px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product__subhero-title {
   text-transform: lowercase;
+  font-size: 24px;
+  line-height: 120%;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__subhero-title {
+    font-size: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__subhero-title {
+    font-size: 40px;
+  }
+}
+
+.product__subhero-subtitle {
+  font-size: 14px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__subhero-subtitle {
+    font-size: 16px;
+    width: 426px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__subhero-subtitle {
+    font-size: 16px;
+    width: 426px;
+  }
 }
 
 .product__button-item {
@@ -2274,7 +2301,6 @@ button:focus {
   font-weight: 700;
   font-size: 40px;
   text-align: start;
-  margin-top: 56px;
   margin-bottom: 16px;
   border-bottom: 1px solid var(--black-hover);
 }
@@ -2291,7 +2317,7 @@ button:focus {
 
 .partner__subtitle {
   font-weight: 500;
-  font-size: 17px;
+  font-size: 18px;
   text-align: start;
 }
 @media screen and (min-width: 1440px) {
@@ -2399,34 +2425,66 @@ button:focus {
 .contacts__block-orange {
   position: relative;
   border-radius: 24px;
-  padding: 24px;
-  width: 847px;
-  height: 237px;
+  padding: 16px 16px 68px 16px;
+  width: 100%;
   background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+}
+@media screen and (min-width: 1440px) {
+  .contacts__block-orange {
+    padding: 24px 24px 76px 24px;
+    width: 847px;
+  }
 }
 
 .contacts__block-blue {
   position: relative;
   border-radius: 24px;
-  padding: 24px;
-  width: 413px;
-  height: 237px;
+  padding: 16px 16px 68px 16px;
+  width: 100%;
   background: linear-gradient(153deg, #12a1de 0%, #c6ffd9 100%);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .contacts__block-blue {
+    width: 314px;
+    padding: 16px 16px 104px 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .contacts__block-blue {
+    padding: 24px 24px 128px 24px;
+    width: 413px;
+  }
 }
 
 .contacts__block {
   position: relative;
   border-radius: 24px;
-  padding: 24px;
-  width: 413px;
-  height: 237px;
+  padding: 16px 16px 68px 16px;
+  width: 100%;
   background: var(--white);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .contacts__block {
+    width: 314px;
+    padding: 16px 16px 104px 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .contacts__block {
+    width: 413px;
+    padding: 24px 24px 128px 24px;
+  }
 }
 
 .contacts__title {
-  font-size: 32px;
+  font-size: 24px;
   margin-bottom: 24px;
   text-align: start;
+}
+@media screen and (min-width: 1440px) {
+  .contacts__title {
+    font-size: 32px;
+  }
 }
 
 .contacts__list {
@@ -2441,8 +2499,22 @@ button:focus {
 
 .contacts__icon {
   position: absolute;
-  bottom: 24px;
-  right: 24px;
+  bottom: 16px;
+  right: 16px;
+  width: 40px;
+  height: 40px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .contacts__icon {
+    bottom: 16px;
+    right: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .contacts__icon {
+    bottom: 24px;
+    right: 24px;
+  }
 }
 
 .backdrop {
