--- a/sass/layouts/_product-section-subhero.scss
+++ b/sass/layouts/_product-section-subhero.scss
@@ -1,6 +1,28 @@
 .product__subhero-container{
-    padding-top: 309px;
+    // padding-top: 309px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .product__subhero-title{
     text-transform:lowercase;
+    font-size: 24px;
+    line-height: 120%;
+    @include tablet{
+        font-size: 40px;
+    }
+    @include desktop{
+        font-size: 40px;
+    }
+}
+.product__subhero-subtitle{
+    font-size: 14px;
+    @include tablet{
+        font-size: 16px;
+        width: 426px;
+    }
+    @include desktop{
+        font-size: 16px;
+        width: 426px;
+    }
 }
