--- a/css/main.css
+++ b/css/main.css
@@ -2002,8 +2002,14 @@ button:focus {
 
 .product__button-item {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 48px;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 1440px) {
+  .product__button-item {
+    margin-bottom: 48px;
+  }
 }
 
 .product__button {
@@ -2023,16 +2029,39 @@ button:focus {
 .product__list-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 15px;
+}
+@media screen and (min-width: 1440px) {
+  .product__list-container {
+    gap: 20px;
+  }
 }
 
 .product__list {
   position: relative;
-  width: 305px;
-  padding: 300px 24px 24px 24px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  width: 164px;
+  height: 350px;
+  padding: 172px 12px 16px 12px;
   border-radius: 24px;
   background-color: var(--white);
   margin-bottom: 36px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__list {
+    width: 314px;
+    height: 460px;
+    padding: 343px 16px 16px 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__list {
+    width: 305px;
+    height: 470px;
+    padding: 330px 24px 24px 24px;
+  }
 }
 
 .product__list-image {
@@ -2069,20 +2098,63 @@ button:focus {
 
 .product__list-subtitle {
   font-weight: 700;
+  font-size: 14px;
   text-align: start;
   width: 100%;
-  height: 63px;
-  margin-bottom: 24px;
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__list-subtitle {
+    width: 282px;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__list-subtitle {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
 }
 
 .product__text-container {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
+  width: 100%;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__text-container {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__text-container {
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .product__list-text {
-  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .product__list-text {
+    font-size: 14px;
+    justify-content: start;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .product__list-text {
+    font-size: 16px;
+  }
+}
+
+.not-active {
+  display: none;
 }
 
 .partner__container {
