--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -1,7 +1,11 @@
 .product__button-item{
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    margin-bottom: 48px;
+    margin-bottom: 16px;
+    @include desktop{
+        margin-bottom: 48px;
+    }
 }
 .product__button{
     display: flex;
@@ -19,16 +23,33 @@
 .product__list-container{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 15px;
+    @include desktop{
+        gap: 20px;
+    }
 }
 
 .product__list{
     position: relative;
-    width: 305px;
-    padding: 300px 24px 24px 24px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    width: 164px;
+    height: 350px;
+    padding: 172px 12px 16px 12px;
     border-radius: 24px;
     background-color: var(--white);
     margin-bottom: 36px;
+    @include tablet{
+        width: 314px;
+        height: 460px;
+        padding: 343px 16px 16px 16px;
+    }
+    @include desktop{
+        width: 305px;
+        height: 470px;
+        padding: 330px 24px 24px 24px;
+    }
 }
 .product__list-image{
     display: block;
@@ -60,16 +81,46 @@
 }
 .product__list-subtitle{
     font-weight: 700;
+    font-size: 14px;
     text-align: start;
     width: 100%;
-    height: 63px;
-    margin-bottom: 24px;
+    margin-bottom: 12px;
+    @include tablet{
+        width: 282px;
+        font-size: 16px;
+    }
+    @include desktop{
+        font-size: 16px;
+        margin-bottom: 24px;
+    }
 }
 .product__text-container{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-between;
+    width: 100%;
+    @include tablet{
+        flex-direction: row;
+        align-items: center;
+    }
+    @include desktop{
+        flex-direction: row;
+        align-items: center;
+    }
 }
 .product__list-text{
-    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
+    @include tablet{
+        font-size: 14px;
+        justify-content: start;
+    }
+    @include desktop{
+        font-size: 16px;
+    }
+}
+.not-active{
+    display: none;
 }
