hero image index.html

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -49,6 +49,7 @@
         
         >.navigation{
             display: flex;
+            margin-left: 40px;
         }  
         >.header__button{
             display: flex;
