--- a/sass/layouts/_section-question.scss
+++ b/sass/layouts/_section-question.scss
@@ -1,6 +1,7 @@
 .question__form{
     position: relative;
     width: 344px;
+    // width: 100%;
     padding: 16px;
     border-radius: 24px;
     background-color: var(--white);
