--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,7 @@ button:focus {
   }
   .header > .navigation {
     display: flex;
+    margin-left: 40px;
   }
   .header > .header__button {
     display: flex;
@@ -517,32 +518,6 @@ button:focus {
 @media screen and (min-width: 1440px) {
   .hero__image-container {
     margin-right: 188px;
-  }
-}
-
-.hero__image {
-  position: absolute;
-  z-index: 100;
-  width: 300px;
-  height: 300px;
-  transform: translate(-15%, 5%);
-  top: 0;
-  left: 0;
-  border-radius: 100%;
-  filter: blur(250px);
-}
-@media screen and (min-width: 744px) and (max-width: 1439px) {
-  .hero__image {
-    width: 400px;
-    height: 400px;
-    transform: translate(-15%, 5%);
-  }
-}
-@media screen and (min-width: 1440px) {
-  .hero__image {
-    width: 300px;
-    height: 300px;
-    transform: translate(-15%, -10%);
   }
 }
 
@@ -2611,9 +2586,9 @@ button:focus {
 
 .modal {
   position: absolute;
-  top: 120px;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, 50%);
 }
 
 .modal__container {
