--- a/css/main.css
+++ b/css/main.css
@@ -2004,7 +2004,7 @@ button:focus {
 .product__list-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 10px;
 }
 @media screen and (min-width: 1440px) {
   .product__list-container {
@@ -2017,9 +2017,9 @@ button:focus {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
-  width: 164px;
+  width: 166px;
   height: 350px;
-  padding: 172px 12px 16px 12px;
+  padding: 172px 10px 16px 10px;
   border-radius: 24px;
   background-color: var(--white);
   margin-bottom: 36px;
@@ -2042,33 +2042,76 @@ button:focus {
 .product__list-image {
   display: block;
   position: absolute;
-  top: -25px;
   left: 50%;
-  transform: translateX(-50%);
+  bottom: 50%;
+  transform: translate(-50%, 10%);
+}
+@media screen and (min-width: 1440px) {
+  .product__list-image {
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 30%);
+  }
 }
 
-.product__list-image_buds {
+.image__snack {
   display: block;
   position: absolute;
-  top: -39px;
   left: 50%;
-  transform: translateX(-50%);
+  bottom: 50%;
+  transform: translate(-45%, 10%);
+}
+@media screen and (min-width: 1440px) {
+  .image__snack {
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-45%, 30%);
+  }
 }
 
-.product__list-image_stick {
+.image__baget {
   display: block;
   position: absolute;
-  top: 50px;
   left: 50%;
-  transform: translateX(-50%);
+  bottom: 50%;
+  transform: translate(-50%);
+}
+@media screen and (min-width: 1440px) {
+  .image__baget {
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 30%);
+  }
 }
 
-.product__list-image_box {
+.image__sweet__corn {
   display: block;
   position: absolute;
-  top: 50px;
   left: 50%;
-  transform: translateX(-50%);
+  bottom: 50%;
+  transform: translate(-50%, 5%);
+}
+@media screen and (min-width: 1440px) {
+  .image__sweet__corn {
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 30%);
+  }
+}
+
+.image_corn__pods {
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 15%);
+}
+@media screen and (min-width: 1440px) {
+  .image_corn__pods {
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 30%);
+  }
 }
 
 .product__list-subtitle {
