--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -23,7 +23,7 @@
 .product__list-container{
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 10px;
     @include desktop{
         gap: 20px;
     }
@@ -34,9 +34,9 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
-    width: 164px;
+    width: 166px;
     height: 350px;
-    padding: 172px 12px 16px 12px;
+    padding: 172px 10px 16px 10px;
     border-radius: 24px;
     background-color: var(--white);
     margin-bottom: 36px;
@@ -54,30 +54,63 @@
 .product__list-image{
     display: block;
     position: absolute;
-    top: -25px;
     left: 50%;
-    transform: translateX(-50%);
+    bottom: 50%;
+    transform: translate(-50%,10%);
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%,30%);
+
+    }
 }
-.product__list-image_buds{
+.image__snack{
     display: block;
     position: absolute;
-    top: -39px;
     left: 50%;
-    transform: translateX(-50%);
+    bottom: 50%;
+    transform: translate(-45%, 10%);
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-45%,30%);
+    }
 }
-.product__list-image_stick{
+.image__baget{
     display: block;
     position: absolute;
-    top: 50px;
     left: 50%;
-    transform: translateX(-50%);
+    bottom: 50%;
+    transform: translate(-50%);
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%,30%);
+    }
 }
-.product__list-image_box{
+.image__sweet__corn{
     display: block;
     position: absolute;
-    top: 50px;
     left: 50%;
-    transform: translateX(-50%);
+    bottom: 50%;
+    transform: translate(-50%,5%);
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%,30%);
+    }
+}
+.image_corn__pods{
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%,15%);
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%,30%);
+    }
 }
 .product__list-subtitle{
     font-weight: 700;
