--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -105,11 +105,38 @@
     position: absolute;
     left: 50%;
     bottom: 50%;
-    transform: translate(-50%,15%);
+    transform: translate(35%,21%);
+    rotate: 90deg;
     @include desktop{
         left: 50%;
         bottom: 50%;
-        transform: translate(-50%,30%);
+        transform: translate(80%,20%);
+    }
+}
+.image_corn__pods__milk{
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(30%,38%);
+    rotate: 90deg;
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(80%,20%);
+    }
+}
+.image_corn__pods__choco{
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(20%,40%);
+    rotate: 90deg;
+    @include desktop{
+        left: 50%;
+        bottom: 50%;
+        transform: translate(40%,47%);
     }
 }
 .product__list-subtitle{
