--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -57,9 +57,14 @@
     left: 50%;
     bottom: 50%;
     transform: translate(-50%,10%);
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(-50%,35%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(-50%,30%);
 
     }
@@ -70,9 +75,14 @@
     left: 50%;
     bottom: 50%;
     transform: translate(-45%, 10%);
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(-45%, 40%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(-45%,30%);
     }
 }
@@ -82,9 +92,14 @@
     left: 50%;
     bottom: 50%;
     transform: translate(-50%);
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(-50%, 35%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(-50%,30%);
     }
 }
@@ -94,9 +109,14 @@
     left: 50%;
     bottom: 50%;
     transform: translate(-50%,5%);
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(-50%,35%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(-50%,30%);
     }
 }
@@ -107,9 +127,14 @@
     bottom: 50%;
     transform: translate(35%,21%);
     rotate: 90deg;
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(75%,19%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(80%,20%);
     }
 }
@@ -120,9 +145,14 @@
     bottom: 50%;
     transform: translate(30%,38%);
     rotate: 90deg;
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(80%,19%); 
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(80%,20%);
     }
 }
@@ -133,9 +163,14 @@
     bottom: 50%;
     transform: translate(20%,40%);
     rotate: 90deg;
+    @include tablet{
+        // left: 50%;
+        // bottom: 50%;
+        transform: translate(38%,46%);
+    }
     @include desktop{
-        left: 50%;
-        bottom: 50%;
+        // left: 50%;
+        // bottom: 50%;
         transform: translate(40%,47%);
     }
 }
