--- a/css/main.css
+++ b/css/main.css
@@ -1060,12 +1060,14 @@ button:focus {
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .question__form {
     width: 648px;
+    padding: 24px;
   }
 }
 @media screen and (min-width: 1440px) {
   .question__form {
     width: 630px;
     border-radius: 24px;
+    padding: 24px;
   }
 }
 
