--- a/sass/layouts/_section-question.scss
+++ b/sass/layouts/_section-question.scss
@@ -8,10 +8,12 @@
     margin: 0 auto;
     @include tablet{
         width: 648px;
+        padding: 24px;
     }
     @include desktop{
         width: 630px;
         border-radius: 24px;
+        padding: 24px;
     }
 }
 .question__title{
