--- a/sass/layouts/_about-hero-section.scss
+++ b/sass/layouts/_about-hero-section.scss
@@ -90,7 +90,7 @@
    color: var(--orange-dark);
 }
 .about__hero__button{
-    display: flex;
+    // display: flex;
     justify-content: space-around;
     margin: 0 auto;
     width: 100%;
