--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,25 +6,17 @@ h1{
     display: none;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-html, body {
-    overflow-x: hidden; /* Забирає горизонтальний скролбар */
-}
-
-// img{
-//     display: block;
-//     max-width: 100%;
-//     height: auto;
+// *, *::before, *::after {
+//     box-sizing: border-box;
 // }
-.container{
+html, body {
+    overflow-x: hidden; 
+}
 
+.container{
     width: 375px;
     padding: 80px 16px ;
     margin: 0 auto;
-
-
     @include tablet{
         width: 744px;
         padding: 120px 48px;
@@ -94,7 +86,6 @@ html, body {
     font-size: 14px;
     line-height: 140%; 
     color: var(--black);
-
     @include tablet{
         font-size: 16px;
     }
@@ -115,22 +106,34 @@ html, body {
         font-size: 64px;
     }
 }
-.button{
+.button__primary{
     display: flex;
     border: none;
+    border-radius: 24px;
+    padding: 16px 24px;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Fixel Display', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 120%;
+}
+// button:hover, 
+// button:focus{
+//    cursor: pointer;
+//    color: var(--grey-more-light);
+// }
+.button__secondary{
+    display: flex;
+    border: none;
+    align-items: center;
+    justify-content: center;
     border-radius: 32px;
     padding: 8px 8px 8px 24px;
-    align-items: center;
     font-family: 'Fixel Display', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 140%;
-    color: var(--black);  
-}
-button:hover, 
-button:focus{
-   cursor: pointer;
-   color: var(--grey-more-light);
 }
 .button__image{
     margin-left: 12px;
@@ -139,8 +142,7 @@ button:focus{
     font-family: 'Fixel Display', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 140%;
-  
+    line-height: 140%; 
 }
 
 .white{
