--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -111,9 +111,10 @@
     width: 100%;
     // width: 413px;
     margin-top: 24px;
-    font-weight: 500;
-    justify-content: center;
-    padding: 16px;
+    background-color: var(--grey-more-light);
+    // font-weight: 500;
+    // justify-content: center;
+    // padding: 16px;
 }
 .footer__conditions-item{
     display: flex;
