--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -96,16 +96,16 @@
     color: var(--grey-more-light);
 }
 .header__button{
-    display: flex;
-    border: none;
-    border-radius: 24px;
-    padding: 16px 24px;
+    // display: flex;
+    // border: none;
+    // border-radius: 24px;
+    // padding: 16px 24px;
     background-color: var(--white);
-    align-items: center;
-    font-family: 'Fixel Display', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 120%;
+    // align-items: center;
+    // font-family: 'Fixel Display', sans-serif;
+    // font-weight: 500;
+    // font-size: 16px;
+    // line-height: 120%;
     color: var(--black);
     margin-left: 32px;
 }
