--- a/sass/layouts/_section-question.scss
+++ b/sass/layouts/_section-question.scss
@@ -1,7 +1,6 @@
 .question__form{
     position: relative;
     width: 344px;
-    // width: 100%;
     padding: 16px;
     border-radius: 24px;
     background-color: var(--white);
@@ -66,9 +65,8 @@
 .question__button{
     background-color: var(--black);
     width: 100%;
-    height: 56px;
     color: var(--white);
-   justify-content: center;
+    padding: 16px;
    }
 .question_image-popcorn{
     display: none;
