--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,11 @@ html, body {
   line-height: 120%;
 }
 
+button:hover,
+button:focus {
+  cursor: pointer;
+}
+
 .button__secondary {
   display: flex;
   border: none;
@@ -248,6 +253,9 @@ html, body {
 .header > .header__button {
   display: none;
 }
+.header > .header__button-second {
+  display: none;
+}
 .header > .button__mobile__menu {
   display: flex;
   justify-content: center;
@@ -273,6 +281,9 @@ html, body {
   .header > .header__button {
     display: flex;
   }
+  .header > .header__button-second {
+    display: flex;
+  }
 }
 @media screen and (min-width: 1440px) {
   .header {
@@ -284,6 +295,9 @@ html, body {
     margin-left: 40px;
   }
   .header > .header__button {
+    display: flex;
+  }
+  .header > .header__button-second {
     display: flex;
   }
   .header > .button__mobile__menu {
@@ -320,25 +334,35 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 32px;
+  gap: 16px;
 }
 
 .nav__link {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 16px;
+  height: 43px;
   color: var(--white);
 }
 
 .nav__link:hover,
 .nav__link:focus {
-  color: var(--grey-more-light);
+  border-radius: 24px;
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .header__button {
   background-color: var(--white);
   color: var(--black);
   margin-left: 32px;
+}
+
+.header__button:hover,
+.header__button:focus {
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .header__second {
@@ -349,8 +373,21 @@ html, body {
   color: var(--black);
 }
 
+.nav__link-second:hover,
+.nav__link-second:focus {
+  border-radius: 24px;
+  background-color: var(--black);
+  color: var(--white);
+}
+
 .header__button-second {
   background-color: var(--grey-more-light);
+}
+
+.header__button-second:hover,
+.header__button-second:focus {
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .active__link {
@@ -818,6 +855,12 @@ html, body {
   margin: 0 auto;
 }
 
+.advantage__button:hover,
+.advantage__button:focus {
+  background-color: var(--white);
+  color: var(--black);
+}
+
 .statistic__title {
   text-align: start;
   margin-bottom: 32px;
@@ -1144,10 +1187,18 @@ html, body {
 }
 
 .question__button {
+  border: 2px solid var(--black);
   background-color: var(--black);
   width: 100%;
   color: var(--white);
   padding: 16px;
+}
+
+.question__button:hover,
+.question__button:focus {
+  background-color: var(--white);
+  color: var(--black);
+  border: 2px solid var(--grey-light);
 }
 
 .question_image-popcorn {
@@ -1301,6 +1352,12 @@ html, body {
     width: 243px;
     margin: 0;
   }
+}
+
+.about__hero__button:hover,
+.about__hero__button:focus {
+  background-color: var(--black);
+  color: var(--white);
 }
 
 @media screen and (min-width: 1440px) {
@@ -2004,6 +2061,8 @@ html, body {
 .product__button:hover,
 .product__button:focus {
   cursor: pointer;
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .product__list-container {
@@ -2027,7 +2086,6 @@ html, body {
   padding: 172px 10px 16px 10px;
   border-radius: 24px;
   background-color: var(--white);
-  margin-bottom: 36px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .product__list {
@@ -2279,6 +2337,12 @@ html, body {
   }
 }
 
+.partners__button:hover,
+.partners__button:focus {
+  background-color: var(--black);
+  color: var(--white);
+}
+
 .footer {
   background-color: var(--black);
 }
@@ -2426,6 +2490,15 @@ html, body {
   width: 100%;
   margin-top: 24px;
   background-color: var(--grey-more-light);
+  border: 2px solid var(--grey-light);
+  padding: 14px 22px;
+}
+
+.footer__button:hover,
+.footer__button:focus {
+  background-color: var(--black);
+  color: var(--white);
+  border: 2px solid var(--grey-light);
 }
 
 .footer__conditions-item {
