--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -118,11 +118,11 @@ html, body {
     font-size: 16px;
     line-height: 120%;
 }
-// button:hover, 
-// button:focus{
-//    cursor: pointer;
+button:hover,
+button:focus{
+   cursor: pointer;
 //    color: var(--grey-more-light);
-// }
+}
 .button__secondary{
     display: flex;
     border: none;
