--- a/sass/layouts/_about-hero-section.scss
+++ b/sass/layouts/_about-hero-section.scss
@@ -36,9 +36,7 @@
     @include desktop{
     flex-direction: row;
     align-items: center;
-
     }
-    
 }
 .about__hero__container{
     display: flex;
@@ -90,7 +88,6 @@
    color: var(--orange-dark);
 }
 .about__hero__button{
-    // display: flex;
     justify-content: space-around;
     margin: 0 auto;
     width: 100%;
@@ -102,4 +99,9 @@
         width: 243px;
         margin: 0;
     }
+}
+.about__hero__button:hover,
+.about__hero__button:focus{
+    background-color: var(--black);
+    color: var(--white);
 }
