--- a/sass/layouts/_section-question.scss
+++ b/sass/layouts/_section-question.scss
@@ -63,11 +63,18 @@
     color: var(--black);
 }
 .question__button{
+    border: 2px solid var(--black);
     background-color: var(--black);
     width: 100%;
     color: var(--white);
     padding: 16px;
    }
+.question__button:hover,
+.question__button:focus{
+    background-color: var(--white);
+    color: var(--black);
+    border: 2px solid var(--grey-light);
+}   
 .question_image-popcorn{
     display: none;
     @include desktop{
